# oto-fatura-sistemi

./: .gitignore  KULLANICI_TERCIHLERI.md  README.md  auto_commit_watcher.py  backup.py  clean_gui.py  eklenecekler.txt  gui.py  gui_backup_fatura_indirme_duzeltildi.py  gui_backup_finale_yakın.py  gui_backup_messy.py  gui_zirve_bağlantılı_taslak_oluşturuyor_logsıra_aktif (1).py  gui_zirve_bağlantılı_taslak_oluşturuyor_logsıra_aktif (1)_backup.py  gui_zirve_bağlantılı_taslak_oluşturuyor_logsıra_aktif.py  guncelleme_kontrol.md  main.py  musteriler.json  requirements.txt  selenium_taslak_oluşturuyor.py  test_auto_accept.py  test_fatura_zirve.xlsx  test_guncelleme.txt  urun_kartlari.json  zirve_bilgileri.json  zirve_excel_şablon.xlsx
Yeni klasör/: customtkinker.py  pyqt6.py  tkinker.py
cpp-version/: CMakeLists.txt  README_CPP.md  build.bat  build.sh  customer.cpp  customer.h  customer_dialog.cpp  customer_dialog.h  invoice.cpp  invoice.h  main.cpp  product.cpp  product.h  product_dialog.cpp  product_dialog.h  selenium_wrapper.cpp  selenium_wrapper.h
indirilen_faturalar/: yazdır.ps1
